# vk-bootstrap

./: CMakeLists.txt  main.cpp  triangle.frag
include/video/: Buffer.h  Renderer.h  UniformBuffer.h  Vertex.h  VmaUsage.h  render_data.h  renderer_struct.h
source/: main.cpp
source/video/: Buffer.cpp  Renderer.cpp  VmaUsage.cpp
